[gd_scene load_steps=36 format=3 uid="uid://dt6sxj335f4em"]

[ext_resource type="Texture2D" uid="uid://vdtnlddk6jum" path="res://Textures/Enemy/golem_robot/golem_sheet.png" id="1_dljbt"]
[ext_resource type="Script" path="res://scripts/robot_golem.gd" id="1_ecvau"]
[ext_resource type="Script" path="res://scripts/FiniteStateMachine.gd" id="2_rbo8s"]
[ext_resource type="Script" path="res://scripts/IdleWalk.gd" id="3_qkuyd"]
[ext_resource type="Texture2D" uid="uid://dypdrii5kkqv3" path="res://Textures/Enemy/golem_robot/Laser_sheet.png" id="3_xoid6"]
[ext_resource type="Script" path="res://scripts/Follow.gd" id="4_drd1h"]
[ext_resource type="Script" path="res://scripts/MeleeAttack.gd" id="6_cyfqj"]
[ext_resource type="Script" path="res://scripts/HomingMissile.gd" id="7_1c8rh"]
[ext_resource type="PackedScene" uid="uid://cpqv4x7lgbdp5" path="res://scenes/golem_bullet.tscn" id="8_1q3e0"]
[ext_resource type="AudioStream" uid="uid://bvts4tn3cf2f6" path="res://Audio/sfx/robot_golem_melee.mp3" id="9_vkgiq"]
[ext_resource type="Script" path="res://scripts/LaserBeam.gd" id="10_qb1xx"]
[ext_resource type="Script" path="res://scripts/Dash.gd" id="10_xfesc"]
[ext_resource type="Script" path="res://scripts/ArmorBuff.gd" id="11_yl16x"]
[ext_resource type="AudioStream" uid="uid://sex5wpkg1abb" path="res://Audio/sfx/robot_golem_missile.wav" id="12_goamd"]
[ext_resource type="Script" path="res://scripts/Death.gd" id="13_5xfof"]
[ext_resource type="AudioStream" uid="uid://dbteg6poljxfr" path="res://Audio/sfx/laser.wav" id="14_rj0s2"]
[ext_resource type="PackedScene" uid="uid://42qup1p37ood" path="res://scenes/hurt_box.tscn" id="14_whrwn"]
[ext_resource type="PackedScene" uid="uid://b5o0hduemvf04" path="res://scenes/hit_box.tscn" id="15_ymspb"]
[ext_resource type="AudioStream" uid="uid://djb72nf041bgj" path="res://Audio/sfx/robot_golem_death.wav" id="18_j7mx5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4g2df"]
size = Vector2(258, 19)

[sub_resource type="Animation" id="Animation_h8k2g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FiniteStateMachine/HomingMissile/snd_missile:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_goamd")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("FiniteStateMachine/MeleeAttack/snd_melee:stream")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_vkgiq")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FiniteStateMachine/Death/snd_death:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_j7mx5")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("FiniteStateMachine/Death/snd_death:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("FiniteStateMachine/HomingMissile/snd_missile:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("FiniteStateMachine/MeleeAttack/snd_melee:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lgrkq"]
resource_name = "armor_buff"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6), Vector2i(6, 6), Vector2i(7, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0fh4r"]
resource_name = "block"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k6taf"]
resource_name = "death"
length = 1.75001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7), Vector2i(6, 7), Vector2i(7, 7), Vector2i(8, 7), Vector2i(9, 7), Vector2i(10, 7), Vector2i(11, 7), Vector2i(12, 7), Vector2i(13, 7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/Death/snd_death:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.125),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_j7mx5")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FiniteStateMachine/Death/snd_death:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_umdim"]
resource_name = "glowing"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_rernr"]
resource_name = "idle_walk"
length = 0.500013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_3xxgy"]
resource_name = "laser"
length = 1.87501
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivot/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375, 1.5, 1.625, 1.75, 1.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FiniteStateMachine/LaserBeam")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_target"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivot/Sprite2D/HitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.125, 1.875),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_csvlx"]
resource_name = "laser_cast"
length = 0.875013
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_2fht1"]
resource_name = "melee_attack"
length = 0.875013
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4), Vector2i(6, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/MeleeAttack/snd_melee:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_vkgiq")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FiniteStateMachine/MeleeAttack/snd_melee:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_lqtke"]
resource_name = "ranged_attack"
length = 1.50001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25001, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2), Vector2i(8, 2), Vector2i(10, 2), Vector2i(10, 2), Vector2i(10, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FiniteStateMachine/HomingMissile/snd_missile:stream")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("12_goamd")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FiniteStateMachine/HomingMissile/snd_missile:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gtlyi"]
_data = {
"RESET": SubResource("Animation_h8k2g"),
"armor_buff": SubResource("Animation_lgrkq"),
"block": SubResource("Animation_0fh4r"),
"death": SubResource("Animation_k6taf"),
"glowing": SubResource("Animation_umdim"),
"idle_walk": SubResource("Animation_rernr"),
"laser": SubResource("Animation_3xxgy"),
"laser_cast": SubResource("Animation_csvlx"),
"melee_attack": SubResource("Animation_2fht1"),
"ranged_attack": SubResource("Animation_lqtke")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_4i1jr"]
radius = 260.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j5h6u"]
radius = 19.0
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vjdee"]
radius = 23.0
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xjp0m"]
radius = 8.0
height = 42.0

[node name="RobotGolem" type="CharacterBody2D" groups=["enemy"]]
light_mask = 3
collision_layer = 5
collision_mask = 5
script = ExtResource("1_ecvau")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_dljbt")
hframes = 14
vframes = 8

[node name="Pivot" type="Node2D" parent="."]
position = Vector2(2, -17)

[node name="Sprite2D" type="Sprite2D" parent="Pivot"]
position = Vector2(99, 16)
texture = ExtResource("3_xoid6")
vframes = 15

[node name="HitBox" parent="Pivot/Sprite2D" instance=ExtResource("15_ymspb")]
position = Vector2(-99, -16)
collision_layer = 2
collision_mask = 2
damage = 15

[node name="CollisionShape2D" parent="Pivot/Sprite2D/HitBox" index="0"]
position = Vector2(120, -0.5)
shape = SubResource("RectangleShape2D_4g2df")
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gtlyi")
}
autoplay = "idle_walk"

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_4i1jr")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("2_rbo8s")

[node name="IdleWalk" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("3_qkuyd")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("4_drd1h")

[node name="MeleeAttack" type="Node2D" parent="FiniteStateMachine" groups=["attack"]]
script = ExtResource("6_cyfqj")

[node name="snd_melee" type="AudioStreamPlayer2D" parent="FiniteStateMachine/MeleeAttack"]
stream = ExtResource("9_vkgiq")
bus = &"Sfx"

[node name="HomingMissile" type="Node2D" parent="FiniteStateMachine" groups=["attack"]]
script = ExtResource("7_1c8rh")
bullet_node = ExtResource("8_1q3e0")

[node name="snd_missile" type="AudioStreamPlayer2D" parent="FiniteStateMachine/HomingMissile"]
stream = ExtResource("12_goamd")
volume_db = -10.0
bus = &"Sfx"

[node name="LaserBeam" type="Node2D" parent="FiniteStateMachine" groups=["attack"]]
script = ExtResource("10_qb1xx")

[node name="snd_laser" type="AudioStreamPlayer2D" parent="FiniteStateMachine/LaserBeam"]
stream = ExtResource("14_rj0s2")
bus = &"Sfx"

[node name="ArmorBuff" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_yl16x")

[node name="Dash" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("10_xfesc")

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_5xfof")

[node name="snd_death" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Death"]
stream = ExtResource("18_j7mx5")
bus = &"Sfx"

[node name="HitBox" parent="." instance=ExtResource("15_ymspb")]
collision_layer = 2
collision_mask = 2
damage = 5

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_j5h6u")

[node name="DisableHitBoxTimer" parent="HitBox" index="1"]
wait_time = 0.8

[node name="HurtBox" parent="." instance=ExtResource("14_whrwn")]
collision_layer = 4
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_vjdee")

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_xjp0m")

[connection signal="area_entered" from="Pivot/Sprite2D/HitBox" to="FiniteStateMachine/LaserBeam" method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/IdleWalk" method="_on_player_detection_body_entered"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="Pivot/Sprite2D/HitBox"]
[editable path="HitBox"]
[editable path="HurtBox"]
